compiler/kernc_cli/tests/soundness/run-pass/pattern/user_pattern_struct_bind.kn
// class: pattern-protocol
// exit: 0

struct CaptureEven {};

impl CaptureEven : Pattern[i32] {
    type Bind = struct { value: i32 };

    fn apply(value: i32) ?Bind {
        if (value % 2) == 0 {
            return .{ Some: .{ value: value } };
        }
        return .None;
    }
}

fn main() i32 {
    let capture = CaptureEven.{};
    return match 6 {
        capture => value - 6,
        _ => 1,
    };
}
