compiler/kernc_cli/tests/soundness/reject/initialization/static_enum_initializer_multiple_variants_rejected.kn
// class: static-initializer-enum-shape
// source: static enum construction must choose exactly one variant
// stderr: Enum literal must specify exactly one variant
// timeout-ms: 2000

enum option[T] {
    None,
    Some: T,
};

static BAD = option[i32].{ None: 0, Some: 1 };

fn main() i32 {
    return 0;
}
